# Nociones-Clave

./: CMakeLists.txt  Estudiante.cpp  Estudiante.h  Persona.cpp  Persona.h  README.md  main.cpp
Ejercicio 1/: main.cpp
Ejercicio 1 y 2/: Estudiante.cpp  Persona.h
Ejercicio 2/: funciones.h  main.cpp
Ejercicio 3, 4 y 5/: Matematicas.h
