cmake_minimum_required(VERSION 3.29)
project(Tema_1)

set(CMAKE_CXX_STANDARD 20)

add_executable(Tema_1 Colecci-n-de-Ejercicios-para-Nociones-Clave/main.cpp
        Colecci-n-de-Ejercicios-para-Nociones-Clave/Persona.cpp
        Colecci-n-de-Ejercicios-para-Nociones-Clave/Persona.h
        Colecci-n-de-Ejercicios-para-Nociones-Clave/Estudiante.cpp
        "Colecci-n-de-Ejercicios-para-Nociones-Clave/Estudiante.h"
        Nociones-Clave/Estudiante.cpp
)
